Move MemorySegment::address under NativeAllocator::wrap + MemorySegment::expand